[package]
name = "massa-ledger-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
# structopt = { version = "0.3", default-features = false }
# paw = "1.0"
clap = { version = "4.5.38", features = ["derive", "cargo"] }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
rocksdb = "0.21"
num = "0.4.3"
rand = "0.9.1"
bytesize = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"

massa_models = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_models" }
massa_hash = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_hash" }
massa_ledger_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_ledger_exports" }
massa_ledger_worker = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_ledger_worker" }
massa_db_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_db_exports" }
massa_final_state = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_final_state" }
massa_async_pool = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_async_pool" }
massa_executed_ops = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_executed_ops" }
massa_pos_exports = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_pos_exports", features = ["test-exports"] }
massa_versioning = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_versioning" }
massa_db_worker = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_db_worker"}
massa_serialization = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_serialization"}
massa_time = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_time"}
massa_signature = { git = "https://github.com/massalabs/massa", branch = "main", package = "massa_signature"}
